# pihole-checkpoint

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-and-push.yml  ci.yml  cleanup-pr-image.yml  docker-build.yml  docker-publish.yml  test.yml  tests.yml
backup/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
backup/management/commands/: discover_instances.py  runapscheduler.py
backup/middleware/: simple_auth.py
backup/migrations/: 0001_initial.py  0002_remove_credential_fields.py  0003_add_multi_instance_fields.py  0003_piholeconfig_env_prefix.py  0004_add_connection_status.py  0005_alter_piholeconfig_env_prefix.py  0006_piholeconfig_env_prefix_unique.py
backup/services/: backup_service.py  credential_service.py  discovery_service.py  metrics_service.py  pihole_client.py  restore_service.py  retention_service.py  system_service.py
backup/services/notifications/: __init__.py  base.py  config.py  discord.py  homeassistant.py  pushbullet.py  service.py  slack.py  telegram.py
backup/static/backup/js/: theme.js
backup/templates/backup/: _connection_badge.html  base.html  dashboard.html  home.html  instance_dashboard.html  instance_list.html  login.html  settings.html
backup/tests/: __init__.py  conftest.py  factories.py
backup/tests/integration/: __init__.py  test_backup_workflow.py  test_scheduler_integration.py
backup/tests/unit/: __init__.py  test_backup_service.py  test_credential_service.py  test_discover_instances.py  test_discovery_service.py  test_notification_service.py  test_pihole_client.py  test_restore_service.py  test_retention_service.py  test_system_service.py
backup/tests/views/: __init__.py  test_backup_endpoints.py  test_dashboard.py  test_home.py  test_instance_management.py  test_metrics.py  test_settings.py
config/: settings.py  urls.py  wsgi.py
docs/: IDEAS.md  adr-0000-index.md  adr-001-pihole-backup-architecture.md  adr-002-offline-static-assets.md  adr-003-single-container-architecture.md  adr-004-manual-backup-ui-refresh.md  adr-005-testing-strategy.md  adr-006-github-docker-publish.md  adr-007-github-test-workflow.md  dep-upgrade-2026-05-09.md
docs/adr/: 0000-index.md  0001-pihole-backup-architecture.md  0002-offline-static-assets.md  0003-single-container-architecture.md  0004-manual-backup-ui-refresh.md  0005-testing-strategy.md  0006-github-docker-publish.md  0007-github-test-workflow.md  0008-one-click-restore.md  0009-backup-failure-notifications.md  0010-env-var-credentials.md  0011-bug-review-findings.md  0012-dark-mode-toggle.md  0013-reliability-security-fixes.md  0014-multi-instance-support.md  0015-simple-password-authentication.md  0016-prometheus-metrics-endpoint.md  0017-django-6-upgrade.md  0018-gunicorn-26-upgrade.md
